ch18 fix equation formatting

--- a/chapter-18.ipynb
+++ b/chapter-18.ipynb
@@ -12,89 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "00f2b2cf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into ‘/Library/Frameworks/R.framework/Versions/4.2-arm64’\n",
-      "(as ‘lib’ is unspecified)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\t/var/folders/mg/1wy1xcls587_h0tqnj42l5740000gn/T//Rtmp6c0BU9/downloaded_packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into ‘/Library/Frameworks/R.framework/Versions/4.2-arm64’\n",
-      "(as ‘lib’ is unspecified)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\t/var/folders/mg/1wy1xcls587_h0tqnj42l5740000gn/T//Rtmp6c0BU9/downloaded_packages\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Attaching package: ‘dplyr’\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:stats’:\n",
-      "\n",
-      "    filter, lag\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:base’:\n",
-      "\n",
-      "    intersect, setdiff, setequal, union\n",
-      "\n",
-      "\n",
-      "Loading required package: ggplot2\n",
-      "\n",
-      "Loading required package: ggstance\n",
-      "\n",
-      "\n",
-      "Attaching package: ‘ggstance’\n",
-      "\n",
-      "\n",
-      "The following objects are masked from ‘package:ggplot2’:\n",
-      "\n",
-      "    geom_errorbarh, GeomErrorbarh\n",
-      "\n",
-      "\n",
-      "Loading required package: scales\n",
-      "\n",
-      "Loading required package: ggridges\n",
-      "\n",
-      "\n",
-      "New to ggformula?  Try the tutorials: \n",
-      "\tlearnr::run_tutorial(\"introduction\", package = \"ggformula\")\n",
-      "\tlearnr::run_tutorial(\"refining\", package = \"ggformula\")\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Run this first so it's ready by the time you need it\n",
     "install.packages(\"dplyr\")\n",
@@ -113,7 +34,7 @@
    "id": "e1ba1f9c",
    "metadata": {},
    "source": [
-    "# Chapter 18 - Evaluating Effect Sizes\n",
+    "# Chapter 18 - Effect Sizes & Statistical Power\n",
     "\n",
     "## 18.1 Statistical vs. practical significance\n",
     "\n",
@@ -171,41 +92,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "496c0829",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "Call:\n",
-       "lm(formula = highest_year_of_school_completed ~ highest_year_school_completed_father, \n",
-       "    data = GSS_subset)\n",
-       "\n",
-       "Residuals:\n",
-       "    Min      1Q  Median      3Q     Max \n",
-       "-7.2011 -1.4116 -0.3064  1.6673  5.4700 \n",
-       "\n",
-       "Coefficients:\n",
-       "                                     Estimate Std. Error t value Pr(>|t|)    \n",
-       "(Intercept)                           9.20110    0.91558  10.049 2.40e-15 ***\n",
-       "highest_year_school_completed_father  0.38816    0.07162   5.419 7.56e-07 ***\n",
-       "---\n",
-       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
-       "\n",
-       "Residual standard error: 2.373 on 72 degrees of freedom\n",
-       "  (26 observations deleted due to missingness)\n",
-       "Multiple R-squared:  0.2897,\tAdjusted R-squared:  0.2799 \n",
-       "F-statistic: 29.37 on 1 and 72 DF,  p-value: 7.564e-07\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "unstandardized_model <- lm(highest_year_of_school_completed ~ highest_year_school_completed_father, \n",
     "                           data=GSS_subset)\n",
@@ -224,40 +116,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6bfe2e0b",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "Call:\n",
-       "lm(formula = highest_year_of_school_completed ~ highest_year_school_completed_father, \n",
-       "    data = GSS_zscore)\n",
-       "\n",
-       "Residuals:\n",
-       "    Min      1Q  Median      3Q     Max \n",
-       "-2.5755 -0.5049 -0.1096  0.5963  1.9564 \n",
-       "\n",
-       "Coefficients:\n",
-       "                                      Estimate Std. Error t value Pr(>|t|)    \n",
-       "(Intercept)                          2.529e-16  9.865e-02   0.000        1    \n",
-       "highest_year_school_completed_father 5.383e-01  9.932e-02   5.419 7.56e-07 ***\n",
-       "---\n",
-       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
-       "\n",
-       "Residual standard error: 0.8486 on 72 degrees of freedom\n",
-       "Multiple R-squared:  0.2897,\tAdjusted R-squared:  0.2799 \n",
-       "F-statistic: 29.37 on 1 and 72 DF,  p-value: 7.564e-07\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "GSS_zscore <- select(GSS_subset, highest_year_of_school_completed, highest_year_school_completed_father) %>%\n",
     "    na.omit(.) %>% #removes rows with any NAs\n",
@@ -297,49 +161,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "91f2c424",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "0.538259989904938"
-      ],
-      "text/latex": [
-       "0.538259989904938"
-      ],
-      "text/markdown": [
-       "0.538259989904938"
-      ],
-      "text/plain": [
-       "[1] 0.53826"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "0.538259989904939"
-      ],
-      "text/latex": [
-       "0.538259989904939"
-      ],
-      "text/markdown": [
-       "0.538259989904939"
-      ],
-      "text/plain": [
-       "[1] 0.53826"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "standardized_model$coefficients[[2]]\n",
     "\n",
@@ -369,47 +196,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8e8d03d7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "0.289723816732465"
-      ],
-      "text/latex": [
-       "0.289723816732465"
-      ],
-      "text/markdown": [
-       "0.289723816732465"
-      ],
-      "text/plain": [
-       "[1] 0.2897238"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "0.289723816732464"
-      ],
-      "text/latex": [
-       "0.289723816732464"
-      ],
-      "text/markdown": [
-       "0.289723816732464"
-      ],
-      "text/plain": [
-       "[1] 0.2897238"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "cor(GSS_subset$highest_year_of_school_completed, GSS_subset$highest_year_school_completed_father,\n",
     "   use=\"pairwise.complete.obs\")^2\n",
@@ -447,85 +237,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "aac2c3fb",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into ‘/Library/Frameworks/R.framework/Versions/4.2-arm64’\n",
-      "(as ‘lib’ is unspecified)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\t/var/folders/mg/1wy1xcls587_h0tqnj42l5740000gn/T//Rtmp6c0BU9/downloaded_packages\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "14.1058823529412"
-      ],
-      "text/latex": [
-       "14.1058823529412"
-      ],
-      "text/markdown": [
-       "14.1058823529412"
-      ],
-      "text/plain": [
-       "[1] 14.10588"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "11.5"
-      ],
-      "text/latex": [
-       "11.5"
-      ],
-      "text/markdown": [
-       "11.5"
-      ],
-      "text/plain": [
-       "[1] 11.5"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "0.955450829044826"
-      ],
-      "text/latex": [
-       "0.955450829044826"
-      ],
-      "text/markdown": [
-       "0.955450829044826"
-      ],
-      "text/plain": [
-       "[1] 0.9554508"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "install.packages(\"lsr\")\n",
     "library(lsr)\n",
@@ -576,65 +293,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "e764e670",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "64.6045045045045"
-      ],
-      "text/latex": [
-       "64.6045045045045"
-      ],
-      "text/markdown": [
-       "64.6045045045045"
-      ],
-      "text/plain": [
-       "[1] 64.6045"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "69.3804347826087"
-      ],
-      "text/latex": [
-       "69.3804347826087"
-      ],
-      "text/markdown": [
-       "69.3804347826087"
-      ],
-      "text/plain": [
-       "[1] 69.38043"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "1.66713534364259"
-      ],
-      "text/latex": [
-       "1.66713534364259"
-      ],
-      "text/markdown": [
-       "1.66713534364259"
-      ],
-      "text/plain": [
-       "[1] 1.667135"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "studentdata <- read.csv(\"https://raw.githubusercontent.com/smburns47/Psyc158/main/studentdata.csv\")\n",
     "#education for people born in US\n",
@@ -771,45 +433,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "2ab85f7a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into ‘/Library/Frameworks/R.framework/Versions/4.2-arm64’\n",
-      "(as ‘lib’ is unspecified)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\t/var/folders/mg/1wy1xcls587_h0tqnj42l5740000gn/T//Rtmp6c0BU9/downloaded_packages\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "     approximate correlation power calculation (arctangh transformation) \n",
-       "\n",
-       "              n = 50\n",
-       "              r = 0.3843186\n",
-       "      sig.level = 0.05\n",
-       "          power = 0.8\n",
-       "    alternative = two.sided\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "install.packages(\"pwr\")\n",
     "library(pwr)\n",
@@ -848,29 +475,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "bd3b9d58",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "     approximate correlation power calculation (arctangh transformation) \n",
-       "\n",
-       "              n = 193.0867\n",
-       "              r = 0.2\n",
-       "      sig.level = 0.05\n",
-       "          power = 0.8\n",
-       "    alternative = two.sided\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pwr.r.test(n=NULL, r=0.2, sig.level=0.05, power=0.8)"
    ]
@@ -895,27 +505,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "50dda0df",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\n",
-       "     Multiple regression power calculation \n",
-       "\n",
-       "              u = 2\n",
-       "              v = 96.4047\n",
-       "             f2 = 0.1\n",
-       "      sig.level = 0.05\n",
-       "          power = 0.8\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "    pwr.f2.test(u=2, v=NULL, f2=0.1, sig.level=0.05, power=0.8)"
    ]
