clean language in assumptions chapter

--- a/chapter-18.ipynb
+++ b/chapter-18.ipynb
@@ -568,7 +568,7 @@
    "id": "a78a67c4",
    "metadata": {},
    "source": [
-    "[Next: Chapter 19 - Sources of Model Bias](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-19.ipynb)"
+    "[Next: Chapter 19 - Traditional Statistical Tools](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-19.ipynb)"
    ]
   }
  ],
