--- a/chapter-22.ipynb
+++ b/chapter-22.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "[Back to Table of Contents](https://www.shannonmburns.com/Psyc158/intro.html)\n",
     "\n",
-    "[Previous: Chapter 21 - Bayesian Statistics](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-21.ipynb)"
+    "[Previous: Chapter 21 - Alternate Approaches - Bayesian Statistics](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-21.ipynb)"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.1.2"
+   "version": "4.2.3"
   }
  },
  "nbformat": 4,
