add new repeated measures data for ch20

--- a/chapter-19.ipynb
+++ b/chapter-19.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85bcf882",
+   "id": "0365c42f",
    "metadata": {},
    "source": [
     "## 19.2 Out-of-sample predictions\n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6916773",
+   "id": "85a24ffb",
    "metadata": {},
    "source": [
     "This is what people are doing when they perform a meta-analysis. They are compiling the estimates across many different studies to arrive at one average effect that is hopefully closer to the true population parameter, and thus produces less bias in new predictions."
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d411f5b4",
+   "id": "a4febe68",
    "metadata": {},
    "source": [
     "## 19.3 Biased and unbiased estimates\n",
@@ -1108,7 +1108,7 @@
    "metadata": {},
    "source": [
     "### How to check for assumption\n",
-    "To check whether residuals are homoskedastic or heteroskedastic, one should make the same plot as above (predictor by residuals) and look for the distinctive cone shape in the cloud of residuals. \n",
+    "To check whether residuals are homoskedastic or heteroskedastic, one should make the same plot as above (predictor by residuals) and look for the distinctive cone shape in the cloud of residuals. If you have a multivariable model, you should make this plot for every predictor. \n",
     "\n",
     "### What to do if assumption is violated\n",
     "Transformation of the dependent variable or robust regression are also ways of dealing with this assumption violation. "
