make track scores data unbalanced

--- a/chapter-20.ipynb
+++ b/chapter-20.ipynb
@@ -12,10 +12,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 115,
    "id": "14b5dbee",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Installing package into ‘/Library/Frameworks/R.framework/Versions/4.2-arm64’\n",
+      "(as ‘lib’ is unspecified)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The downloaded binary packages are in\n",
+      "\t/var/folders/mg/1wy1xcls587_h0tqnj42l5740000gn/T//Rtmpo3HL6S/downloaded_packages\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -100,8 +120,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "860bdcf4",
+   "execution_count": 119,
+   "id": "eed3a048",
    "metadata": {
     "scrolled": true
    },
@@ -179,7 +199,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99b0211e",
+   "id": "26af5d38",
    "metadata": {},
    "source": [
     "If our question is restricted to just our team of runners and no one else, we can figure out their improvement really easily. We simply find the mean of their change scores:"
@@ -187,8 +207,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "9089f347",
+   "execution_count": 120,
+   "id": "c42ebf1b",
    "metadata": {
     "scrolled": true
    },
@@ -196,16 +216,16 @@
     {
      "data": {
       "text/html": [
-       "-0.318999999999999"
+       "-0.0489999999999995"
       ],
       "text/latex": [
-       "-0.318999999999999"
+       "-0.0489999999999995"
       ],
       "text/markdown": [
-       "-0.318999999999999"
+       "-0.0489999999999995"
       ],
       "text/plain": [
-       "[1] -0.319"
+       "[1] -0.049"
       ]
      },
      "metadata": {},
@@ -218,7 +238,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40586c90",
+   "id": "8b4d5d12",
    "metadata": {},
    "source": [
     "Great! This number means that, on average, our team ran faster than before after training for a month. If we only care about evaluating our current team, we can stop here and don't need to use any more statistics. \n",
@@ -243,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "2b52df91",
+   "id": "5e794d3a",
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99c96f56",
+   "id": "9ea86cfb",
    "metadata": {},
    "source": [
     "Thus we need a way refining our question: given a population $\\mu$ *and* an expected variation among samples from that population, is our sample really surprising or not?\n",
@@ -302,7 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "459fbdbf",
+   "id": "25e8fd7b",
    "metadata": {
     "scrolled": true
    },
@@ -333,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16c6d769",
+   "id": "44fad73b",
    "metadata": {},
    "source": [
     "The output of this function gives us information about the calculated t-score (-1.7664), the degrees of freedom of the test (9, which is N-1), and the p-value (0.1111). It also gives us a 95% CI for our estimate of the mean, [-0.73, 0.09]. Note that a t-value can be positive or negative, signifying if our sample mean is higher or lower than the hypothesized population mean.\n",
@@ -346,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "13547722",
+   "id": "034a2954",
    "metadata": {
     "scrolled": true
    },
@@ -379,7 +399,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8167eecb",
+   "id": "9e612b7e",
    "metadata": {},
    "source": [
     "In the null model of the GLM framework, we are estimating the sample mean as $b_0$ and evaluating if it is significantly different from 0. In a one-sample t-test, we are evaluating whether a sample mean $\\bar{X}$ is significantly different from the null hypothesis $\\mu = 0$. These are the exact same question, just posed different ways. Thus, you can get the same result using a null model form of the GLM or the one-sample t-test.\n",
@@ -390,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "a19a78fd",
+   "id": "f6e8abe5",
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +438,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9f46cbe",
+   "id": "d9e1bbaa",
    "metadata": {},
    "source": [
     "Then we specify a null hypothesis:\n",
@@ -433,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "575d6f99",
+   "id": "0fee9723",
    "metadata": {
     "scrolled": true
    },
@@ -464,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de0232a5",
+   "id": "de28979d",
    "metadata": {},
    "source": [
     "Based on these results, our sample mean of 48.08 would be very unusual if it were drawn from a population with $\\mu = 51.76$ (p < 0.001). Thus we reject this null hypothesis in favor of the alternative hypothesis that our team is from a faster population.  \n",
@@ -479,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "89ce3e87",
+   "id": "9b9b7d58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e27a4a2",
+   "id": "04a04d09",
    "metadata": {},
    "source": [
     "An independent samples t-test answers the question \"are these two groups likely drawn from the same population?\" The null hypothesis of this question would be: \n",
@@ -514,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "1c39dbb6",
+   "id": "3188ef46",
    "metadata": {
     "scrolled": true
    },
@@ -545,7 +565,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d330992a",
+   "id": "b5a60300",
    "metadata": {},
    "source": [
     "Based on this result, what would you conclude about which populations each group likely came from?\n",
@@ -556,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "f7baf05e",
+   "id": "3c5b6fee",
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "7a976d6c",
+   "id": "2777b99d",
    "metadata": {
     "scrolled": true
    },
@@ -722,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3410c22",
+   "id": "2321a39b",
    "metadata": {},
    "source": [
     "The output of this code tells you $SS_b$ (Sum of Squares in the 'condition' column) and $SS_w$ (Sum of Squares in the 'Residuals' column). To get the corresponding F-statistic and p-value, wrap this command in the ```summary()``` function:"
@@ -731,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "1da07c8d",
+   "id": "0dfec844",
    "metadata": {
     "scrolled": true
    },
@@ -756,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "502e694c",
+   "id": "ff292b84",
    "metadata": {},
    "source": [
     "Since this p-value is <0.05, we'd reject the null hypothesis that all groups of athletes come from the same population. At least one of the group means is sufficiently different from at least one other that we decide there are different populations involved here - meaning, type of training matters for running time. In APA format, we'd write this as \"there was a significant effect of training type on running time *F*(3,36) = 4.691, *p* = 0.00726.\"\n",
@@ -767,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "2eca9eaa",
+   "id": "8bf888ca",
    "metadata": {},
    "outputs": [
     {
@@ -795,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db726005",
+   "id": "40eabde1",
    "metadata": {},
    "source": [
     "$SS_b$ is the exact same value as $SS_{model}$, just with a different name. Both refer to the amount of variation explained by this grouping variable. Likewise, $SS_w$ is the same as $SS_{error}$, the amount of variation left unexplained. The F-statistic and p-value are also the same. That's why this is called an ANOVA table - it's the results of an ANOVA test. If we output the summary of a GLM model with ```condition``` predicting ```time```: "
@@ -804,7 +824,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "351dacf1",
+   "id": "1fb8b4ca",
    "metadata": {
     "scrolled": true
    },
@@ -844,7 +864,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4950b8a4",
+   "id": "b3db7078",
    "metadata": {},
    "source": [
     "That F-statistic and p-value for the significance of the whole model is also the same. Thus, a one-way ANOVA test is the exact same as testing a whole GLM model with multiple categorical predictors.\n",
@@ -857,7 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "8a4485fa",
+   "id": "b516ffea",
    "metadata": {
     "scrolled": true
    },
@@ -905,7 +925,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69a8694f",
+   "id": "9dc209fe",
    "metadata": {},
    "source": [
     "The method of multiple comparison correction that ```pairwise()``` is using is called Tukey's Honestly Significance Differences, which adjusts the calculated p-values up rather than pulling down the critical p-value. \n",
@@ -961,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 107,
-   "id": "ca6faed6",
+   "id": "7333f211",
    "metadata": {
     "scrolled": true
    },
@@ -990,7 +1010,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05b829af",
+   "id": "a2ce2fa1",
    "metadata": {},
    "source": [
     "In this table, remember we're getting $SS_b$ for the effect of each predictor (in the Sum Sq column) as well as $SS_w$ for the between group variation (that which is not explained by the grouping variables). We also get a corresponding F and p value for each separate predictor that tells us whether there is a significant difference in group means for different levels of that predictor. \n",
@@ -1001,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "5b906593",
+   "id": "d8165f32",
    "metadata": {
     "scrolled": true
    },
@@ -1040,7 +1060,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89499310",
+   "id": "008cd65e",
    "metadata": {},
    "source": [
     "As you may be unsurprised to find at this point, the hypothesis testing results are exactly the same. The $b_1$ estimate is not different enough from 0 to be considered significant (i.e., not a big enough group difference between different levels of track training). In contrast, the $b_2$ coefficient is different enough from 0 to be significant (i.e., a large group difference between different levels of weight training). \n",
@@ -1053,7 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": 112,
-   "id": "2b0b72d6",
+   "id": "44974895",
    "metadata": {
     "scrolled": true
    },
@@ -1115,7 +1135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dfcfd01",
+   "id": "4349ad73",
    "metadata": {},
    "source": [
     "Comparably, as a GLM:"
@@ -1124,7 +1144,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "c71d4ab2",
+   "id": "17c9098a",
    "metadata": {
     "scrolled": true
    },
@@ -1165,7 +1185,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "4bd312d9",
+   "id": "c57ecc70",
    "metadata": {},
    "outputs": [
     {
