fix error in page navigation

--- a/chapter-19.ipynb
+++ b/chapter-19.ipynb
@@ -1300,7 +1300,7 @@
    "id": "0a4af6db",
    "metadata": {},
    "source": [
-    "[Next: Chapter 20 - Bayesian Statistics](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-20.ipynb)"
+    "[Next: Chapter 20 - Traditional Statistical Tools](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-20.ipynb)"
    ]
   }
  ],
