redfine mean square differences

--- a/chapter-20.ipynb
+++ b/chapter-20.ipynb
@@ -13,6 +13,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "56c57a75",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "14b5dbee",
    "metadata": {
     "scrolled": true
@@ -376,9 +384,9 @@
     "$$df_b = G - 1$$\n",
     "$$df_w = N - G$$\n",
     "\n",
-    "The ratio of mean squared errors then is:\n",
+    "The ratio of mean squared differences then is:\n",
     "\n",
-    "$$\\frac{SS_b / df_b}{SS_w / df_w} = \\frac{MSE_b}{MSE_w}$$\n",
+    "$$\\frac{SS_b / df_b}{SS_w / df_w} = \\frac{MS_b}{MS_w}$$\n",
     "\n",
     "This ratio has a specific name: it is the **F-ratio** or the **F-statistic** ([sound familiar?](https://colab.research.google.com/github/smburns47/Psyc158/blob/main/chapter-17.ipynb#scrollTo=509057e3)).\n",
     "\n",
@@ -971,7 +979,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "4.2.3"
+   "version": "4.3.2"
   }
  },
  "nbformat": 4,
