--- a/chapter-3.ipynb
+++ b/chapter-3.ipynb
@@ -44,71 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "0ae6a733",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A data.frame: 5 x 2</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>x1</th><th scope=col>x2</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>1</td><td>18</td></tr>\n",
-       "\t<tr><td>2</td><td>21</td></tr>\n",
-       "\t<tr><td>3</td><td>20</td></tr>\n",
-       "\t<tr><td>4</td><td>23</td></tr>\n",
-       "\t<tr><td>5</td><td>20</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A data.frame: 5 x 2\n",
-       "\\begin{tabular}{ll}\n",
-       " x1 & x2\\\\\n",
-       " <dbl> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t 1 & 18\\\\\n",
-       "\t 2 & 21\\\\\n",
-       "\t 3 & 20\\\\\n",
-       "\t 4 & 23\\\\\n",
-       "\t 5 & 20\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A data.frame: 5 x 2\n",
-       "\n",
-       "| x1 &lt;dbl&gt; | x2 &lt;dbl&gt; |\n",
-       "|---|---|\n",
-       "| 1 | 18 |\n",
-       "| 2 | 21 |\n",
-       "| 3 | 20 |\n",
-       "| 4 | 23 |\n",
-       "| 5 | 20 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  x1 x2\n",
-       "1 1  18\n",
-       "2 2  21\n",
-       "3 3  20\n",
-       "4 4  23\n",
-       "5 5  20"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x1 <- c(1,2,3,4,5)\n",
     "x2 <- c(18,21,20,23,20)\n",
@@ -129,71 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "a625fa44",
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table class=\"dataframe\">\n",
-       "<caption>A data.frame: 5 x 2</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>id</th><th scope=col>age</th></tr>\n",
-       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>1</td><td>18</td></tr>\n",
-       "\t<tr><td>2</td><td>21</td></tr>\n",
-       "\t<tr><td>3</td><td>20</td></tr>\n",
-       "\t<tr><td>4</td><td>23</td></tr>\n",
-       "\t<tr><td>5</td><td>20</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A data.frame: 5 x 2\n",
-       "\\begin{tabular}{ll}\n",
-       " id & age\\\\\n",
-       " <dbl> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t 1 & 18\\\\\n",
-       "\t 2 & 21\\\\\n",
-       "\t 3 & 20\\\\\n",
-       "\t 4 & 23\\\\\n",
-       "\t 5 & 20\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A data.frame: 5 x 2\n",
-       "\n",
-       "| id &lt;dbl&gt; | age &lt;dbl&gt; |\n",
-       "|---|---|\n",
-       "| 1 | 18 |\n",
-       "| 2 | 21 |\n",
-       "| 3 | 20 |\n",
-       "| 4 | 23 |\n",
-       "| 5 | 20 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "  id age\n",
-       "1 1  18 \n",
-       "2 2  21 \n",
-       "3 3  20 \n",
-       "4 4  23 \n",
-       "5 5  20 "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "data.frame(ID = x1, age = x2)"
    ]
@@ -956,6 +842,7 @@
     "\n",
     "- **dataset**: a collection of information, representing data values collected from multiple entities and usually across multiple variables. \n",
     "- **data frame**: a data type in R that holds dataset values as a rectangular matrix, with rows as separate observations and columns as separate variables. \n",
+    "- **named argument**: values passed as arguments to a function and identified by a specific parameter name. In R, the name/value pair is declared with an = sign. \n",
     "- **working directory**: the directory on a computer that is currently visible to a computer program. \n",
     "- **file path**: the location of a file within the directory structure of a computer. The **absolute file path** is the path of navigation to the file from the computer root directory. The **relative file path** is the path of nagivation to the file from the current working directory. \n",
     "- **dimension**: A property of a matrix. The value of the first dimension is the number of rows and the value of the second dimension is the number of columns. \n",
