--- a/chapter-1.ipynb
+++ b/chapter-1.ipynb
@@ -566,7 +566,17 @@
     "- **argument**: The input values on which a function runs operations. \n",
     "- **run-time errors**: An error in code that prevents the code from running.\n",
     "- **package**: Sets of functions written by other people that can be downloaded and added to one's coding project. \n",
-    "- **library**: The computer directory where a downloaded package is stored and from where it can be loaded for use in an R session."
+    "- **library**: The computer directory where a downloaded package is stored and from where it can be loaded for use in an R session.\n",
+    "\n",
+    "## New R functionality\n",
+    "\n",
+    "- [math operators](https://www.w3schools.com/r/r_operators.asp) \n",
+    "- [commenting](https://www.w3schools.com/r/r_comments.asp) with ```#```\n",
+    "- declaring an object with [an assignment operator](https://rpubs.com/aephidayatuloh/basicr01-assignment)\n",
+    "- [print()](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/print)\n",
+    "- [sum()](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/sum)\n",
+    "- [install.packages()](https://www.rdocumentation.org/packages/utils/versions/3.6.2/topics/install.packages)\n",
+    "- [library()](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/library)"
    ]
   },
   {
